Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55003

Flaky test: tst_qquickimage on OS X 10.9

    XMLWordPrintable

Details

    • macOS
    • 7876add8b13e166711dc42e458baab43d50999d2

    Description

      tst_qquickimage nullPixmapPaint hits a Q_UNIMPLEMENTED which in turn generates a warning. The test also tries to make sure some other warning is not encountered. It seems like this is a race condition - sometimes the message logger manages to accidentally capture the unimplemented message.

      agent:2016/07/28 23:07:18 build.go:267: [make check -j1] 900 1200
       /Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquickimage/target_wrapper.sh  ./tst_qquickimage nullPixmapPaint
       ********* Start testing of tst_qquickimage *********
       Config: Using QtTest library 5.8.0, Qt 5.8.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 6.0 (clang-600.0.57) (Apple))
       PASS   : tst_qquickimage::initTestCase()
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       PASS   : tst_qquickimage::nullPixmapPaint()
       PASS   : tst_qquickimage::cleanupTestCase()
       Totals: 3 passed, 0 failed, 0 skipped, 0 blacklisted, 686ms
       ********* Finished testing of tst_qquickimage *********
       
       agent:2016/07/28 23:07:19 build.go:267: [make check -j1] 900 1200
       /Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquickimage/target_wrapper.sh  ./tst_qquickimage nullPixmapPaint
       ********* Start testing of tst_qquickimage *********
       Config: Using QtTest library 5.8.0, Qt 5.8.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 6.0 (clang-600.0.57) (Apple))
       PASS   : tst_qquickimage::initTestCase()
       FAIL!  : tst_qquickimage::nullPixmapPaint() 'messageHandler.messages().size() == 0' returned FALSE. (Unimplemented code.)
          Loc: [tst_qquickimage.cpp(690)]
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       QWARN  : tst_qquickimage::nullPixmapPaint() Unimplemented code.
       PASS   : tst_qquickimage::cleanupTestCase()
       Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 723ms
       ********* Finished testing of tst_qquickimage *********
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              srutledg Shawn Rutledge
              frederik Frederik Gladhorn
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes